--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -10,15 +10,7 @@
         <h1>{{ group.title }}</h1>
         <article>
           {% for post in posts %}
-            <ul>
-              <li>
-                Автор: {{ post.author.get_full_name }}
-              </li>
-              <li>
-                Дата публикации: {{ post.pub_date|date:"d E Y" }}
-              </li>
-            </ul>
-            <p>{{ post.text }}</p>
+            {% include 'includes/pub.html' %}
             {% if post.group %}
               <a href="{% url 'posts:group_list' group.slug %}">все записи группы</a>
             {% endif %}   
