--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -10,15 +10,7 @@
   {% block content %}
   <div class="container py-5">
     {% for post in posts %}
-      <ul>
-        <li>
-          Автор: {{ post.author.get_full_name }}
-        </li>
-        <li>
-          Дата публикации: {{ post.pub_date|date:"d E Y" }}
-        </li>
-      </ul>
-      <p>{{ post.text }}</p>
+      {% include 'includes/pub.html' %}
       {% if post.group %}
         <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
       {% endif %}
